--- a/Pre_Processing.ipynb
+++ b/Pre_Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "id": "8023fbe4-c3ef-4603-9a28-53b4c79cdb68",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 46,
    "id": "80d43a2a-8613-4a41-a37a-64dd3a6d285e",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "id": "a3c7abe9-6203-496b-9686-8397c5a8f263",
    "metadata": {},
    "outputs": [],
@@ -275,8 +275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "7167c12e",
+   "execution_count": null,
+   "id": "74a02418",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,8 +285,6 @@
     "    PATIENT_ADMISSIONS_MERGED = PATIENT_ADMISSIONS_MERGED.copy()\n",
     "    CONTROL_ADMISSIONS_MERGED = CONTROL_ADMISSIONS_MERGED.copy()\n",
     "\n",
-    "    PATIENT_ADMISSIONS_MERGED[\"ADMISSION_INDEX\"] = PATIENT_ADMISSIONS_MERGED.index\n",
-    "\n",
     "    PATIENT_ADMISSIONS_MERGED[\"ADMITTIME\"] = pd.to_datetime(\n",
     "        PATIENT_ADMISSIONS_MERGED[\"ADMITTIME\"], errors=\"coerce\"\n",
     "    )\n",
@@ -294,6 +292,18 @@
     "    CONTROL_ADMISSIONS_MERGED[\"ADMITTIME\"] = pd.to_datetime(\n",
     "        CONTROL_ADMISSIONS_MERGED[\"ADMITTIME\"], errors=\"coerce\"\n",
     "    )\n",
+    "\n",
+    "    PATIENT_ADMISSIONS_MERGED = PATIENT_ADMISSIONS_MERGED.sort_values(\n",
+    "        [\"SUBJECT_ID\", \"ADMITTIME\"]\n",
+    "    )\n",
+    "\n",
+    "    \"\"\"\n",
+    "    PATIENT_ADMISSIONS_MERGED[\"PATIENT_ADMISSION_INDEX\"] = (\n",
+    "        PATIENT_ADMISSIONS_MERGED\n",
+    "        .groupby(\"SUBJECT_ID\")\n",
+    "        .cumcount() + 1\n",
+    "    )\n",
+    "    \"\"\"\n",
     "\n",
     "    DISEASE_ADMISSIONS = PATIENT_ADMISSIONS_MERGED[\n",
     "        PATIENT_ADMISSIONS_MERGED[\"HADM_ID\"].isin(AD_HADM_ID)\n",
@@ -321,17 +331,26 @@
     "        (PATIENT_ADMISSIONS_MERGED[\"ADMITTIME\"] <= PATIENT_ADMISSIONS_MERGED[\"Comparator\"])\n",
     "    ]\n",
     "\n",
+    "    PATIENT_ADMISSIONS_MERGED.loc[PATIENT_ADMISSIONS_MERGED[\"Comparator\"].notna(), \"PATIENT_ADMISSION_INDEX\"] = (\n",
+    "        PATIENT_ADMISSIONS_MERGED[PATIENT_ADMISSIONS_MERGED[\"Comparator\"].notna()]\n",
+    "        .groupby(\"SUBJECT_ID\")[\"ADMITTIME\"]\n",
+    "        .rank(method=\"first\", ascending=False)\n",
+    "        .astype(int) - 1\n",
+    "    )\n",
+    "    \n",
+    "    PATIENT_ADMISSIONS_MERGED[\"PATIENT_ADMISSION_INDEX\"] = PATIENT_ADMISSIONS_MERGED[\"PATIENT_ADMISSION_INDEX\"].astype(\"float\")\n",
+    "\n",
     "    PATIENT_ADMISSIONS_MERGED = PATIENT_ADMISSIONS_MERGED.drop(columns=[\"Comparator\"])\n",
     "\n",
-    "    PATIENT_ADMISSIONS_MERGED = PATIENT_ADMISSIONS_MERGED.set_index(\"ADMISSION_INDEX\")\n",
-    "    PATIENT_ADMISSIONS_MERGED = PATIENT_ADMISSIONS_MERGED.sort_index()\n",
+    "    # Keep control DF columns consistent\n",
+    "    CONTROL_ADMISSIONS_MERGED[\"ADMISSION_INDEX_PER_PATIENT\"] = np.nan\n",
     "\n",
     "    return PATIENT_ADMISSIONS_MERGED, CONTROL_ADMISSIONS_MERGED"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "id": "944292af",
    "metadata": {},
    "outputs": [],
@@ -341,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "373a8875-2261-4d82-84ac-923810f87831",
    "metadata": {},
    "outputs": [
@@ -353,8 +372,8 @@
       "['44101',  '5185', '99674', '56962',  '9971', '42731', '99859', '70703',\n",
       "  '5793',  '2874',\n",
       " ...\n",
-      " 'V8542', '45184', 'V2652',  '2409',  '1124',  '7801', '43401', '78009',\n",
-      " '44029', '34989']\n",
+      " '78702',  '7102', '30521', '45184',  '3004', 'V2652', 'V1052', 'V8542',\n",
+      " '43401', '78009']\n",
       "Length: 844, dtype: str\n",
       "<StringArray>\n",
       "['25013',  '3371',  '5849',  '5780', 'V5867', '25063',  '5363',  '4580',\n",
@@ -367,13 +386,15 @@
       "       'ADMISSION_TYPE', 'ADMISSION_LOCATION', 'DISCHARGE_LOCATION',\n",
       "       'INSURANCE', 'LANGUAGE', 'RELIGION', 'MARITAL_STATUS', 'ETHNICITY',\n",
       "       'EDREGTIME', 'EDOUTTIME', 'DIAGNOSIS (LABEL)', 'HOSPITAL_EXPIRE_FLAG',\n",
-      "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE'],\n",
+      "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE',\n",
+      "       'PATIENT_ADMISSION_INDEX'],\n",
       "      dtype='str')\n",
       "Index(['SUBJECT_ID', 'HADM_ID', 'ADMITTIME', 'DISCHTIME', 'DEATHTIME',\n",
       "       'ADMISSION_TYPE', 'ADMISSION_LOCATION', 'DISCHARGE_LOCATION',\n",
       "       'INSURANCE', 'LANGUAGE', 'RELIGION', 'MARITAL_STATUS', 'ETHNICITY',\n",
       "       'EDREGTIME', 'EDOUTTIME', 'DIAGNOSIS (LABEL)', 'HOSPITAL_EXPIRE_FLAG',\n",
-      "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE'],\n",
+      "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE',\n",
+      "       'ADMISSION_INDEX_PER_PATIENT'],\n",
       "      dtype='str')\n"
      ]
     },
@@ -383,7 +404,7 @@
        "\"\\nThomas's Note Retained Below:\\n\\nWe need to add another Column having a hospital amdission ID value for each event further back from the event.\\n\\nNOTE that we need to label the most recent event as 0 and count backwards in order to have all patients match.\\n\\nNeed to search in the literature what to do with repeated lab values. For example, if a patient across multiple admissions has their SpO2 value taken 6 times, what do we do with those values? For example, take average? Take most recent? Not sure\\n\\nSearch lab events that are important for the diagnoses and use those.\\n\\nAlso need to randomly sample from the non patient cohort rather than take them all.\\n\\n\""
       ]
      },
-     "execution_count": 22,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,12 +416,6 @@
     "\n",
     "print(PATIENT_ADMISSIONS_MERGED.columns)\n",
     "print(CONTROL_ADMISSIONS_MERGED.columns)\n",
-    "\n",
-    "#for i in range(len(PATIENT_ADMISSIONS_MERGED['DIAGNOSIS (ICD_9)'].explode().unique())):\n",
-    "#    print(str(PATIENT_ADMISSIONS_MERGED['DIAGNOSIS (ICD_9)'].explode().unique()[i]) + \",\")\n",
-    "\n",
-    "#for i in range(len(CONTROL_ADMISSIONS_MERGED['DIAGNOSIS (ICD_9)'].explode().unique())):\n",
-    "#    print(str(CONTROL_ADMISSIONS_MERGED['DIAGNOSIS (ICD_9)'].explode().unique()[i]) + \",\")\n",
     "\n",
     "'''\n",
     "Thomas's Note Retained Below:\n",
@@ -420,12 +435,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "id": "34686fff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATIENT_ADMISSIONS_MERGED.to_csv(r\"C:\\Users\\kappl\\Documents\\BIOE5860\\PATIENT_ADMISSIONS_MERGED.csv\")"
+    "PATIENT_ADMISSIONS_MERGED.to_csv(r\"C:\\Users\\kappl\\Documents\\BIOE5860\\PATIENT_ADMISSIONS_MERGED.csv\")\n",
+    "CONTROL_ADMISSIONS_MERGED.to_csv(r\"C:\\Users\\kappl\\Documents\\BIOE5860\\CONTROL_ADMISSIONS_MERGED.csv\")"
    ]
   }
  ],
