--- a/Pre_Processing.ipynb
+++ b/Pre_Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 197,
    "id": "8023fbe4-c3ef-4603-9a28-53b4c79cdb68",
    "metadata": {},
    "outputs": [],
@@ -40,10 +40,35 @@
     "    \"SUBJECT_ID\"\n",
     "].unique() \n",
     "\n",
+    "\"\"\"\n",
+    "Adding filter to remove the text based AD diagnoses that don't have the ICD9 code\n",
+    "\"\"\"\n",
+    "\n",
+    "# Also grab patients with aortic dissection in admission text\n",
+    "aortic_text_ids = ADMISSIONS[\n",
+    "    ADMISSIONS['DIAGNOSIS'].str.contains('AORTIC DISSECTION', na=False)\n",
+    "]['SUBJECT_ID'].unique()\n",
+    "\n",
+    "# Combine both sets — these should ALL be excluded from controls\n",
+    "EXCLUDE_FROM_CONTROLS = np.union1d(AD_SUBJECT_ID, aortic_text_ids)\n",
+    "\n",
+    "# Now build controls excluding both groups\n",
+    "CONTROL_SUBJECT_ID = DIAGNOSES_ICD.loc[\n",
+    "    ~DIAGNOSES_ICD[\"SUBJECT_ID\"].isin(EXCLUDE_FROM_CONTROLS),\n",
+    "    \"SUBJECT_ID\"\n",
+    "].unique()\n",
+    "\n",
+    "\"\"\"\n",
+    "Done adding\n",
+    "\"\"\"\n",
+    "\n",
+    "\"\"\"\n",
+    "commenting out as it's now redundant\n",
     "CONTROL_SUBJECT_ID = DIAGNOSES_ICD.loc[\n",
     "    ~DIAGNOSES_ICD[\"SUBJECT_ID\"].isin(AD_SUBJECT_ID), \n",
     "    \"SUBJECT_ID\"\n",
     "].unique()\n",
+    "\"\"\"\n",
     "\n",
     "#Returns the specific admissions where aortic dissection was diagnosed\n",
     "AD_HADM_ID = DIAGNOSES_ICD.loc[\n",
@@ -51,9 +76,6 @@
     "    \"HADM_ID\"\n",
     "].unique()\n",
     "\n",
-    "\"\"\"\n",
-    "Question for Daniel: do we need to filter this again keeping only the first AD diagnosis?\n",
-    "\"\"\"\n",
     "\n",
     "#Identify all diagnoses for patients diagnosed with aortic dissection, including for admissions where they were not diagnosed with AD\n",
     "PATIENT_DIAGNOSES = DIAGNOSES_ICD[DIAGNOSES_ICD['SUBJECT_ID'].isin(AD_SUBJECT_ID)]\n",
@@ -79,7 +101,7 @@
     ")\n",
     "\n",
     "#Remove DIAGNOSES_ICD to conserve memory since we have already filtered for the relevant data\n",
-    "del DIAGNOSES_ICD\n",
+    "#del DIAGNOSES_ICD\n",
     "\n",
     "#Return all procedures for patients diagnosed with AD, including for admissions where they were not diagnosed with AD\n",
     "PATIENT_PROCEDURES = PROCEDURES_ICD[PROCEDURES_ICD['SUBJECT_ID'].isin(AD_SUBJECT_ID)]\n",
@@ -106,7 +128,7 @@
     ")\n",
     "\n",
     "#Remove PROCEDURES_ICD to conserve memory since we have already extracted the relevant rows\n",
-    "del PROCEDURES_ICD\n",
+    "#del PROCEDURES_ICD\n",
     "\n",
     "#Return every admission entry for patients who were diagnosed with AD at some point\n",
     "PATIENT_ADMISSIONS = ADMISSIONS[ADMISSIONS['SUBJECT_ID'].isin(AD_SUBJECT_ID)]\n",
@@ -170,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 198,
    "id": "80d43a2a-8613-4a41-a37a-64dd3a6d285e",
    "metadata": {},
    "outputs": [
@@ -183,15 +205,15 @@
       "       'INSURANCE', 'LANGUAGE', 'RELIGION', 'MARITAL_STATUS', 'ETHNICITY',\n",
       "       'EDREGTIME', 'EDOUTTIME', 'DIAGNOSIS (LABEL)', 'HOSPITAL_EXPIRE_FLAG',\n",
       "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE'],\n",
-      "      dtype='str')\n",
+      "      dtype='object')\n",
       "(378, 20)\n",
       "Index(['SUBJECT_ID', 'HADM_ID', 'ADMITTIME', 'DISCHTIME', 'DEATHTIME',\n",
       "       'ADMISSION_TYPE', 'ADMISSION_LOCATION', 'DISCHARGE_LOCATION',\n",
       "       'INSURANCE', 'LANGUAGE', 'RELIGION', 'MARITAL_STATUS', 'ETHNICITY',\n",
       "       'EDREGTIME', 'EDOUTTIME', 'DIAGNOSIS (LABEL)', 'HOSPITAL_EXPIRE_FLAG',\n",
       "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE'],\n",
-      "      dtype='str')\n",
-      "(58462, 20)\n"
+      "      dtype='object')\n",
+      "(58440, 20)\n"
      ]
     }
    ],
@@ -207,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 199,
    "id": "a3c7abe9-6203-496b-9686-8397c5a8f263",
    "metadata": {},
    "outputs": [],
@@ -270,12 +292,15 @@
     "\n",
     "#Construct final labs DFs through concatenation\n",
     "FINAL_PATIENT_LABS = pd.concat(PATIENT_LAB_EVENTS2)\n",
-    "FINAL_CONTROL_LABS = pd.concat(CONTROL_LAB_EVENTS2)"
+    "FINAL_CONTROL_LABS = pd.concat(CONTROL_LAB_EVENTS2)\n",
+    "\n",
+    "FINAL_PATIENT_LABS.to_csv(r\"C:\\BIOE5860_Data\\FINAL_PATIENT_LABS.csv\", index=False)\n",
+    "FINAL_CONTROL_LABS.to_csv(r\"C:\\BIOE5860_Data\\FINAL_CONTROL_LABS.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 200,
    "id": "74a02418",
    "metadata": {},
    "outputs": [],
@@ -350,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 201,
    "id": "944292af",
    "metadata": {},
    "outputs": [],
@@ -368,34 +393,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<StringArray>\n",
-      "['44101',  '5185', '99674', '56962',  '9971', '42731', '99859', '70703',\n",
-      "  '5793',  '2874',\n",
-      " ...\n",
-      " '78702',  '7102', '30521', '45184',  '3004', 'V2652', 'V1052', 'V8542',\n",
-      " '43401', '78009']\n",
-      "Length: 844, dtype: str\n",
-      "<StringArray>\n",
-      "['25013',  '3371',  '5849',  '5780', 'V5867', '25063',  '5363',  '4580',\n",
-      " '25043', '40390',\n",
-      " ...\n",
-      " '82534', 'V6889', 'E9238', '74921',  '9063', '72672', '37882', '38832',\n",
-      " '40400', '44382']\n",
-      "Length: 6973, dtype: str\n",
       "Index(['SUBJECT_ID', 'HADM_ID', 'ADMITTIME', 'DISCHTIME', 'DEATHTIME',\n",
       "       'ADMISSION_TYPE', 'ADMISSION_LOCATION', 'DISCHARGE_LOCATION',\n",
       "       'INSURANCE', 'LANGUAGE', 'RELIGION', 'MARITAL_STATUS', 'ETHNICITY',\n",
       "       'EDREGTIME', 'EDOUTTIME', 'DIAGNOSIS (LABEL)', 'HOSPITAL_EXPIRE_FLAG',\n",
       "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE',\n",
       "       'PATIENT_ADMISSION_INDEX'],\n",
-      "      dtype='str')\n",
+      "      dtype='object')\n",
+      "(378, 21)\n",
       "Index(['SUBJECT_ID', 'HADM_ID', 'ADMITTIME', 'DISCHTIME', 'DEATHTIME',\n",
       "       'ADMISSION_TYPE', 'ADMISSION_LOCATION', 'DISCHARGE_LOCATION',\n",
       "       'INSURANCE', 'LANGUAGE', 'RELIGION', 'MARITAL_STATUS', 'ETHNICITY',\n",
       "       'EDREGTIME', 'EDOUTTIME', 'DIAGNOSIS (LABEL)', 'HOSPITAL_EXPIRE_FLAG',\n",
       "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE',\n",
       "       'ADMISSION_INDEX_PER_PATIENT'],\n",
-      "      dtype='str')\n"
+      "      dtype='object')\n",
+      "(58440, 21)\n"
      ]
     },
     {
@@ -404,33 +417,99 @@
        "\"\\nThomas's Note Retained Below:\\n\\nWe need to add another Column having a hospital amdission ID value for each event further back from the event.\\n\\nNOTE that we need to label the most recent event as 0 and count backwards in order to have all patients match.\\n\\nNeed to search in the literature what to do with repeated lab values. For example, if a patient across multiple admissions has their SpO2 value taken 6 times, what do we do with those values? For example, take average? Take most recent? Not sure\\n\\nSearch lab events that are important for the diagnoses and use those.\\n\\nAlso need to randomly sample from the non patient cohort rather than take them all.\\n\\n\""
       ]
      },
-     "execution_count": 51,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#display unique ICD9 codes in the filtered patient admissions\n",
-    "print(PATIENT_ADMISSIONS_MERGED['DIAGNOSIS (ICD_9)'].explode().unique())\n",
-    "print(CONTROL_ADMISSIONS_MERGED['DIAGNOSIS (ICD_9)'].explode().unique())\n",
+    "#print(PATIENT_ADMISSIONS_MERGED['DIAGNOSIS (ICD_9)'].explode().unique())\n",
+    "#print(CONTROL_ADMISSIONS_MERGED['DIAGNOSIS (ICD_9)'].explode().unique())\n",
     "\n",
     "print(PATIENT_ADMISSIONS_MERGED.columns)\n",
+    "print(PATIENT_ADMISSIONS_MERGED.shape)\n",
     "print(CONTROL_ADMISSIONS_MERGED.columns)\n",
+    "print(CONTROL_ADMISSIONS_MERGED.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "id": "92392489",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATIENT_ADMISSIONS_MERGED.to_csv(r\"C:\\BIOE5860_Data\\PATIENT_ADMISSIONS_MERGED.csv\", index=False)\n",
+    "CONTROL_ADMISSIONS_MERGED.to_csv(r\"C:\\BIOE5860_Data\\CONTROL_ADMISSIONS_MERGED.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "id": "3e968bda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "17\n",
+      "{83040, 56898, 41603, 26308, 25828, 5353, 682, 19914, 24652, 48078, 31377, 16181, 21206, 95030, 13208, 6938, 5183}\n",
+      "Index(['SUBJECT_ID', 'HADM_ID', 'ADMITTIME', 'DISCHTIME', 'DEATHTIME',\n",
+      "       'ADMISSION_TYPE', 'ADMISSION_LOCATION', 'DISCHARGE_LOCATION',\n",
+      "       'INSURANCE', 'LANGUAGE', 'RELIGION', 'MARITAL_STATUS', 'ETHNICITY',\n",
+      "       'EDREGTIME', 'EDOUTTIME', 'DIAGNOSIS (LABEL)', 'HOSPITAL_EXPIRE_FLAG',\n",
+      "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE',\n",
+      "       'PATIENT_ADMISSION_INDEX'],\n",
+      "      dtype='object')\n",
+      "(378, 21)\n",
+      "Index(['SUBJECT_ID', 'HADM_ID', 'ADMITTIME', 'DISCHTIME', 'DEATHTIME',\n",
+      "       'ADMISSION_TYPE', 'ADMISSION_LOCATION', 'DISCHARGE_LOCATION',\n",
+      "       'INSURANCE', 'LANGUAGE', 'RELIGION', 'MARITAL_STATUS', 'ETHNICITY',\n",
+      "       'EDREGTIME', 'EDOUTTIME', 'DIAGNOSIS (LABEL)', 'HOSPITAL_EXPIRE_FLAG',\n",
+      "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE',\n",
+      "       'ADMISSION_INDEX_PER_PATIENT'],\n",
+      "      dtype='object')\n",
+      "(58440, 21)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#this script finds all patients who have 'AORTIC DISSECTION' in their ADMISSIONS DIAGNOSIS text field\n",
+    "#but do not have the corresponding ICD9 code in DIAGNOSES_ICD\n",
+    "#my_icd9_code = [whatever yours is]\n",
+    " \n",
+    "aortic_ids = ADMISSIONS[ADMISSIONS['DIAGNOSIS'].str.contains('AORTIC DISSECTION', na=False)]['SUBJECT_ID'].unique()\n",
+    " \n",
+    "\"\"\"\n",
+    "AD_SUBJECT_ID = DIAGNOSES_ICD.loc[\n",
+    "    DIAGNOSES_ICD[\"ICD9_CODE\"].astype(str).isin(my_icd9_code),\n",
+    "    \"SUBJECT_ID\"\n",
+    "].unique()\n",
+    "\"\"\"\n",
+    " \n",
+    "#aortic_patients = PATIENT_DIAGNOSES[PATIENT_DIAGNOSES['SUBJECT_ID']].unique()\n",
+    " \n",
+    "#find patients who have AORTIC DISSECTION text but don't have the ICD9 code from my_icd9_code\n",
+    "print(len(set(difference) & set(CONTROL_SUBJECT_ID))) #if this is 0 then all were successfully removed in first cell\n",
+    "difference = set(aortic_ids) - set(AD_SUBJECT_ID)\n",
+    " \n",
+    "print(len(difference))\n",
+    "print(difference)\n",
+    " \n",
+    "#remove all subject IDs found above from CONTROL_SUBJECT_ID since we don't know if they are actually controls \n",
+    "#or if they are patients with AD who just don't have the correct ICD9 code in the DIAGNOSES_ICD file\n",
+    "#CONTROL_SUBJECT_ID = CONTROL_SUBJECT_ID[~np.isin(CONTROL_SUBJECT_ID, list(difference))]\n",
     "\n",
-    "'''\n",
-    "Thomas's Note Retained Below:\n",
+    "#PATIENT_ADMISSIONS_MERGED.to_csv(r\"C:\\BIOE5860_Data\\PATIENT_ADMISSIONS_MERGED.csv\", index=False)\n",
+    "#CONTROL_ADMISSIONS_MERGED.to_csv(r\"C:\\BIOE5860_Data\\CONTROL_ADMISSIONS_MERGED.csv\", index=False)\n",
     "\n",
-    "We need to add another Column having a hospital amdission ID value for each event further back from the event.\n",
-    "\n",
-    "NOTE that we need to label the most recent event as 0 and count backwards in order to have all patients match.\n",
-    "\n",
-    "Need to search in the literature what to do with repeated lab values. For example, if a patient across multiple admissions has their SpO2 value taken 6 times, what do we do with those values? For example, take average? Take most recent? Not sure\n",
-    "\n",
-    "Search lab events that are important for the diagnoses and use those.\n",
-    "\n",
-    "Also need to randomly sample from the non patient cohort rather than take them all.\n",
-    "\n",
-    "'''"
+    "print(PATIENT_ADMISSIONS_MERGED.columns)\n",
+    "print(PATIENT_ADMISSIONS_MERGED.shape)\n",
+    "print(CONTROL_ADMISSIONS_MERGED.columns)\n",
+    "print(CONTROL_ADMISSIONS_MERGED.shape)"
    ]
   }
  ],
@@ -450,7 +529,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.2"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
