--- a/Pre_Processing.ipynb
+++ b/Pre_Processing.ipynb
@@ -229,25 +229,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "a3c7abe9-6203-496b-9686-8397c5a8f263",
    "metadata": {},
    "outputs": [],
    "source": [
     "chunksize = 50000\n",
-    "LAB_EVENTS = pd.read_csv(r\"C:\\BIOE5860_Data\\LABEVENTS.csv\",chunksize=chunksize)\n",
-    "LAB_IDS = pd.read_csv(r\"C:\\BIOE5860_Data\\Lab_Item_Codes.txt\", sep=\"\\t\")\n",
+    "LAB_EVENTS = pd.read_csv('./LABEVENTS.csv',chunksize=chunksize)\n",
+    "LAB_IDS = pd.read_csv(\"Lab_Item_Codes.txt\", sep=\"\\t\")\n",
     "\n",
     "PATIENT_LAB_EVENTS2 = []\n",
     "CONTROL_LAB_EVENTS2 = []\n",
     "\n",
-    "\n",
     "labs_of_interest = [\n",
-    "    'TROPONIN', 'D-DIMER', 'CREATININE', 'LACTATE', \n",
-    "    'HEMOGLOBIN', 'HEMATOCRIT', 'CK-MB', 'BUN', \n",
-    "    'UREA', 'PROCALCITONIN', 'C-REACTIVE', 'CRP', \n",
-    "    'PLATELET', 'FIBRINOGEN', 'LDH', 'LACTATE DEHYDROGENASE', \n",
-    "    'BILIRUBIN', 'AST', 'ALT', 'GLUCOSE', \n",
+    "    'TROPONIN', 'D-DIMER', 'CREATININE', 'CK-MB', 'BUN', \n",
+    "    'UREA', 'C-REACTIVE', 'LDH', 'LACTATE DEHYDROGENASE', \n",
+    "    'BILIRUBIN', 'AST', 'ALT', \n",
     "    'WHITE BLOOD', 'WBC', 'LYMPHOCYTE', 'NEUTROPHIL'\n",
     "]\n",
     "\n",
@@ -262,15 +259,18 @@
     "\n",
     "for EVENT in LAB_EVENTS:\n",
     "\n",
+    "    unique_admission_count = len(EVENT['HADM_ID'].unique())\n",
+    "    unique_admission_count += unique_admission_count\n",
+    "\n",
     "    EVENT = EVENT.loc[\n",
     "        EVENT['ITEMID'].isin(lab_ids)\n",
     "    ]\n",
     "    \n",
-    "    #Identify all patient labs for patients who were diagnosed with AD at any point\n",
-    "    PATIENT_LAB_EVENTS = EVENT[EVENT['SUBJECT_ID'].isin(AD_SUBJECT_ID)]\n",
+    "    #Identify all patient labs for patients who were diagnosed with AD at any point. Do not include labs taken during admissions following their first diagnosis\n",
+    "    PATIENT_LAB_EVENTS = EVENT[EVENT['HADM_ID'].isin(PATIENT_ADMISSIONS_MERGED['HADM_ID'])]\n",
     "    \n",
     "    #pull control group lab events as well\n",
-    "    CONTROL_LAB_EVENTS = EVENT[EVENT['SUBJECT_ID'].isin(CONTROL_SUBJECT_ID)]\n",
+    "    CONTROL_LAB_EVENTS = EVENT[EVENT['HADM_ID'].isin(CONTROL_ADMISSIONS_MERGED['HADM_ID'])]\n",
     "    \n",
     "    #Remove redundant rows\n",
     "    PATIENT_LAB_EVENTS = PATIENT_LAB_EVENTS.drop(['ROW_ID','VALUE'],axis=1)\n",
@@ -294,8 +294,7 @@
     "FINAL_PATIENT_LABS = pd.concat(PATIENT_LAB_EVENTS2)\n",
     "FINAL_CONTROL_LABS = pd.concat(CONTROL_LAB_EVENTS2)\n",
     "\n",
-    "FINAL_PATIENT_LABS.to_csv(r\"C:\\BIOE5860_Data\\FINAL_PATIENT_LABS.csv\", index=False)\n",
-    "FINAL_CONTROL_LABS.to_csv(r\"C:\\BIOE5860_Data\\FINAL_CONTROL_LABS.csv\", index=False)"
+    "print(unique_admission_count)"
    ]
   },
   {
@@ -520,7 +519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
