--- a/Pre_Processing.ipynb
+++ b/Pre_Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "8023fbe4-c3ef-4603-9a28-53b4c79cdb68",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "80d43a2a-8613-4a41-a37a-64dd3a6d285e",
    "metadata": {},
    "outputs": [
@@ -205,14 +205,14 @@
       "       'INSURANCE', 'LANGUAGE', 'RELIGION', 'MARITAL_STATUS', 'ETHNICITY',\n",
       "       'EDREGTIME', 'EDOUTTIME', 'DIAGNOSIS (LABEL)', 'HOSPITAL_EXPIRE_FLAG',\n",
       "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE'],\n",
-      "      dtype='object')\n",
+      "      dtype='str')\n",
       "(378, 20)\n",
       "Index(['SUBJECT_ID', 'HADM_ID', 'ADMITTIME', 'DISCHTIME', 'DEATHTIME',\n",
       "       'ADMISSION_TYPE', 'ADMISSION_LOCATION', 'DISCHARGE_LOCATION',\n",
       "       'INSURANCE', 'LANGUAGE', 'RELIGION', 'MARITAL_STATUS', 'ETHNICITY',\n",
       "       'EDREGTIME', 'EDOUTTIME', 'DIAGNOSIS (LABEL)', 'HOSPITAL_EXPIRE_FLAG',\n",
       "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE'],\n",
-      "      dtype='object')\n",
+      "      dtype='str')\n",
       "(58440, 20)\n"
      ]
     }
@@ -229,14 +229,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a3c7abe9-6203-496b-9686-8397c5a8f263",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "136\n"
+     ]
+    }
+   ],
    "source": [
     "chunksize = 50000\n",
-    "LAB_EVENTS = pd.read_csv('./LABEVENTS.csv',chunksize=chunksize)\n",
-    "LAB_IDS = pd.read_csv(\"Lab_Item_Codes.txt\", sep=\"\\t\")\n",
+    "LAB_EVENTS = pd.read_csv(r\"C:\\BIOE5860_Data\\LABEVENTS.csv\",chunksize=chunksize)\n",
+    "LAB_IDS = pd.read_csv(r\"C:\\BIOE5860_Data\\Lab_Item_Codes.txt\", sep=\"\\t\")\n",
     "\n",
     "PATIENT_LAB_EVENTS2 = []\n",
     "CONTROL_LAB_EVENTS2 = []\n",
@@ -299,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "74a02418",
    "metadata": {},
    "outputs": [],
@@ -374,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "944292af",
    "metadata": {},
    "outputs": [],
@@ -384,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "373a8875-2261-4d82-84ac-923810f87831",
    "metadata": {},
    "outputs": [
@@ -398,7 +406,7 @@
       "       'EDREGTIME', 'EDOUTTIME', 'DIAGNOSIS (LABEL)', 'HOSPITAL_EXPIRE_FLAG',\n",
       "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE',\n",
       "       'PATIENT_ADMISSION_INDEX'],\n",
-      "      dtype='object')\n",
+      "      dtype='str')\n",
       "(378, 21)\n",
       "Index(['SUBJECT_ID', 'HADM_ID', 'ADMITTIME', 'DISCHTIME', 'DEATHTIME',\n",
       "       'ADMISSION_TYPE', 'ADMISSION_LOCATION', 'DISCHARGE_LOCATION',\n",
@@ -406,7 +414,7 @@
       "       'EDREGTIME', 'EDOUTTIME', 'DIAGNOSIS (LABEL)', 'HOSPITAL_EXPIRE_FLAG',\n",
       "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE',\n",
       "       'ADMISSION_INDEX_PER_PATIENT'],\n",
-      "      dtype='object')\n",
+      "      dtype='str')\n",
       "(58440, 21)\n"
      ]
     }
@@ -424,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "92392489",
    "metadata": {},
    "outputs": [],
@@ -435,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "3e968bda",
    "metadata": {},
    "outputs": [
@@ -445,14 +453,14 @@
      "text": [
       "0\n",
       "17\n",
-      "{83040, 56898, 41603, 26308, 25828, 5353, 682, 19914, 24652, 48078, 31377, 16181, 21206, 95030, 13208, 6938, 5183}\n",
+      "{np.int64(83040), np.int64(56898), np.int64(41603), np.int64(26308), np.int64(25828), np.int64(5353), np.int64(682), np.int64(19914), np.int64(24652), np.int64(48078), np.int64(31377), np.int64(16181), np.int64(21206), np.int64(95030), np.int64(13208), np.int64(6938), np.int64(5183)}\n",
       "Index(['SUBJECT_ID', 'HADM_ID', 'ADMITTIME', 'DISCHTIME', 'DEATHTIME',\n",
       "       'ADMISSION_TYPE', 'ADMISSION_LOCATION', 'DISCHARGE_LOCATION',\n",
       "       'INSURANCE', 'LANGUAGE', 'RELIGION', 'MARITAL_STATUS', 'ETHNICITY',\n",
       "       'EDREGTIME', 'EDOUTTIME', 'DIAGNOSIS (LABEL)', 'HOSPITAL_EXPIRE_FLAG',\n",
       "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE',\n",
       "       'PATIENT_ADMISSION_INDEX'],\n",
-      "      dtype='object')\n",
+      "      dtype='str')\n",
       "(378, 21)\n",
       "Index(['SUBJECT_ID', 'HADM_ID', 'ADMITTIME', 'DISCHTIME', 'DEATHTIME',\n",
       "       'ADMISSION_TYPE', 'ADMISSION_LOCATION', 'DISCHARGE_LOCATION',\n",
@@ -460,7 +468,7 @@
       "       'EDREGTIME', 'EDOUTTIME', 'DIAGNOSIS (LABEL)', 'HOSPITAL_EXPIRE_FLAG',\n",
       "       'HAS_CHARTEVENTS_DATA', 'DIAGNOSIS (ICD_9)', 'PROCEDURE TYPE',\n",
       "       'ADMISSION_INDEX_PER_PATIENT'],\n",
-      "      dtype='object')\n",
+      "      dtype='str')\n",
       "(58440, 21)\n"
      ]
     }
