--- a/Pre_Processing.ipynb
+++ b/Pre_Processing.ipynb
@@ -243,10 +243,10 @@
     "CONTROL_LAB_EVENTS2 = []\n",
     "\n",
     "labs_of_interest = [\n",
-    "    'TROPONIN', 'D-DIMER', 'CREATININE', 'CK-MB', 'BUN', \n",
+    "    'TROPONIN', 'D-DIMER', 'CREATININE', 'BUN', \n",
     "    'UREA', 'C-REACTIVE', 'LDH', 'LACTATE DEHYDROGENASE', \n",
     "    'BILIRUBIN', 'AST', 'ALT', \n",
-    "    'WHITE BLOOD', 'WBC', 'LYMPHOCYTE', 'NEUTROPHIL'\n",
+    "    'WHITE BLOOD', 'WBC', 'LYMPHOCYTE', 'NEUTROPHIL\n",
     "]\n",
     "\n",
     "#create one large string which the string matcher will search through\n",
