--- a/Pre_Processing.ipynb
+++ b/Pre_Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8023fbe4-c3ef-4603-9a28-53b4c79cdb68",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "80d43a2a-8613-4a41-a37a-64dd3a6d285e",
    "metadata": {},
    "outputs": [
@@ -222,15 +222,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a3c7abe9-6203-496b-9686-8397c5a8f263",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "136\n"
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 12) (1133360734.py, line 12)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m'WHITE BLOOD', 'WBC', 'LYMPHOCYTE', 'NEUTROPHIL\u001b[39m\n                                        ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m unterminated string literal (detected at line 12)\n"
      ]
     }
    ],
@@ -246,7 +247,7 @@
     "    'TROPONIN', 'D-DIMER', 'CREATININE', 'BUN', \n",
     "    'UREA', 'C-REACTIVE', 'LDH', 'LACTATE DEHYDROGENASE', \n",
     "    'BILIRUBIN', 'AST', 'ALT', \n",
-    "    'WHITE BLOOD', 'WBC', 'LYMPHOCYTE', 'NEUTROPHIL\n",
+    "    'WHITE BLOOD', 'WBC', 'LYMPHOCYTE', 'NEUTROPHIL'\n",
     "]\n",
     "\n",
     "#create one large string which the string matcher will search through\n",
@@ -300,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "74a02418",
    "metadata": {},
    "outputs": [],
@@ -375,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "944292af",
    "metadata": {},
    "outputs": [],
@@ -385,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "373a8875-2261-4d82-84ac-923810f87831",
    "metadata": {},
    "outputs": [
@@ -425,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "92392489",
    "metadata": {},
    "outputs": [],
@@ -436,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "3e968bda",
    "metadata": {},
    "outputs": [
