--- a/Pre_Processing.ipynb
+++ b/Pre_Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "id": "8023fbe4-c3ef-4603-9a28-53b4c79cdb68",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
    "id": "80d43a2a-8613-4a41-a37a-64dd3a6d285e",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 51,
    "id": "a3c7abe9-6203-496b-9686-8397c5a8f263",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 52,
    "id": "74a02418",
    "metadata": {},
    "outputs": [],
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 53,
    "id": "944292af",
    "metadata": {},
    "outputs": [],
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 54,
    "id": "373a8875-2261-4d82-84ac-923810f87831",
    "metadata": {},
    "outputs": [
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 55,
    "id": "92392489",
    "metadata": {},
    "outputs": [],
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "3e968bda",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
+      "Number of patients with AD text but no ICD9 code remaining: 0\n",
       "17\n",
       "{83040, 56898, 41603, 26308, 25828, 5353, 682, 19914, 24652, 48078, 31377, 16181, 21206, 95030, 13208, 6938, 5183}\n",
       "Index(['SUBJECT_ID', 'HADM_ID', 'ADMITTIME', 'DISCHTIME', 'DEATHTIME',\n",
@@ -485,10 +485,12 @@
     "#find patients who have AORTIC DISSECTION text but don't have the ICD9 code from my_icd9_code\n",
     "\n",
     "difference = set(aortic_ids) - set(AD_SUBJECT_ID)\n",
-    "print(len(set(difference) & set(CONTROL_SUBJECT_ID))) #if this is 0 then all were successfully removed in first cell\n",
+    "reamining = len(set(difference) & set(CONTROL_SUBJECT_ID)) #if this is 0 then all were successfully removed in first cell\n",
+    "print(f'Number of patients with AD text but no ICD9 code remaining: {reamining}')\n",
     "\n",
-    "print(len(difference))\n",
-    "print(difference)\n",
+    "\n",
+    "#print(len(difference))\n",
+    "#print(difference)\n",
     " \n",
     "#remove all subject IDs found above from CONTROL_SUBJECT_ID since we don't know if they are actually controls \n",
     "#or if they are patients with AD who just don't have the correct ICD9 code in the DIAGNOSES_ICD file\n",
@@ -505,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 57,
    "id": "28fed8a4",
    "metadata": {},
    "outputs": [
@@ -581,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 58,
    "id": "49bcc376",
    "metadata": {},
    "outputs": [
@@ -654,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 59,
    "id": "929f3830",
    "metadata": {},
    "outputs": [
@@ -751,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 60,
    "id": "2bbf0e81",
    "metadata": {},
    "outputs": [
@@ -847,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 61,
    "id": "c6044b07",
    "metadata": {},
    "outputs": [
@@ -941,8 +943,7 @@
     "lab_dx_pivot.columns = [f\"LAB_{int(item)}_dx_{stat}\" for stat, item in lab_dx_pivot.columns]\n",
     "\n",
     "# Deltas: index-0 mean minus overall mean\n",
-    "# This captures how abnormal a patient's labs were at presentation\n",
-    "# compared to their own historical baseline\n",
+    "# This captures how abnormal a patient's labs were at presentation compared to their own historical baseline\n",
     "\n",
     "# Get overall mean per (patient, lab)\n",
     "overall_mean = lab_overall[['SUBJECT_ID_MAPPED', 'ITEMID', 'mean']].copy()\n",
@@ -976,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 62,
    "id": "967d2f02",
    "metadata": {},
    "outputs": [
@@ -1017,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 63,
    "id": "16c8a3ea",
    "metadata": {},
    "outputs": [
@@ -1085,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 64,
    "id": "555f5353",
    "metadata": {},
    "outputs": [
@@ -13063,7 +13064,7 @@
        "[5 rows x 11754 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
