--- a/Pre_Processing.ipynb
+++ b/Pre_Processing.ipynb
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "49bcc376",
    "metadata": {},
    "outputs": [
@@ -633,6 +633,17 @@
     "\n",
     "    return rows\n",
     "\n",
+    "# Remove AD diagnosis codes from the list of codes we are building properties for\n",
+    "# since those are the reference point and we want to look at other codes in relation to that\n",
+    "# Remove target-leaking codes — these ARE the diagnosis we're predicting\n",
+    "LEAK_DIAG_CODES = my_icd9_code\n",
+    "\n",
+    "for df in [PATIENT_ADMISSIONS_MERGED, CONTROL_ADMISSIONS_MERGED]:\n",
+    "    df['DIAG_LIST'] = df['DIAG_LIST'].apply(\n",
+    "        lambda codes: [c for c in codes if c not in LEAK_DIAG_CODES]\n",
+    "    )\n",
+    "\n",
+    "# Now build temporal properties for diagnoses and procedures\n",
     "print(\"Building temporal diagnosis properties for patients...\")\n",
     "patient_diag_rows = build_temporal_code_properties(\n",
     "    PATIENT_ADMISSIONS_MERGED, 'DIAG_LIST', 'DIAG'\n",
