--- a/Train_Models.ipynb
+++ b/Train_Models.ipynb
@@ -212,6 +212,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "db186bda",
+   "metadata": {},
+   "source": [
+    "Accuracy = correct predictions/total predictions\n",
+    "\n",
+    "precision = PPV\n",
+    "\n",
+    "recall = sensitivity (true pos / total pos)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "cfd6dbbe",
