--- a/Pre_Processing.ipynb
+++ b/Pre_Processing.ipynb
@@ -378,7 +378,7 @@
     "\n",
     "    PATIENT_ADMISSIONS_MERGED = PATIENT_ADMISSIONS_MERGED[\n",
     "        (PATIENT_ADMISSIONS_MERGED[\"Comparator\"].isna()) |\n",
-    "        (PATIENT_ADMISSIONS_MERGED[\"ADMITTIME\"] <= PATIENT_ADMISSIONS_MERGED[\"Comparator\"])\n",
+    "        (PATIENT_ADMISSIONS_MERGED[\"ADMITTIME\"] < PATIENT_ADMISSIONS_MERGED[\"Comparator\"])\n",
     "    ]\n",
     "\n",
     "    PATIENT_ADMISSIONS_MERGED.loc[PATIENT_ADMISSIONS_MERGED[\"Comparator\"].notna(), \"PATIENT_ADMISSION_INDEX\"] = (\n",
